<resources>
    <string name="app_name">Kednections</string>

    <!-- TODO: Текст для form_activity -->
    <string name="city_default">местами</string>

    <!-- TODO: Текст для form_activity -->
    <string name="count">1/5</string>

    <!-- TODO: Текст для fragment_auth -->
    <string name="connect">Ну ч, коннект?</string>
    <string name="email">email</string>
    <string name="password">пароль</string>
    <string name="resume">продолжить</string>
    <string name="text_description_for_auth_fragment">тапнул — со всем согласился</string>
    <string name="or">или</string>

    <!-- TODO: Текст для fragment_nickname -->
    <string name="last_name_first_name">Фамилия Имя*</string>
    <string name="text_description_for_nickname_fragment">что отображать в профиле?</string>
    <string name="nick">ник</string>

    <!-- TODO: Текст для fragment_avatar -->
    <string name="text_description_for_avatar_fragment">выбери или загрузи свое</string>
    <string name="face">лицо</string>
    <string name="skip">пропустить</string>

    <!-- TODO: Текст для fragment_specialization -->
    <string name="text_description_for_specialization_fragment">держи себя в руках — выбери до 3</string>
    <string name="whos_by_suit">Кто по масти?</string>
    <string name="art_director">арт-директор</string>
    <string name="illustrator">иллюстратор</string>
    <string name="three_d_designer">3d-дизайнер</string>
    <string name="web_designer">веб-дизайнер</string>
    <string name="game_designer">гейм-дизайнер</string>
    <string name="artist">художник</string>
    <string name="graphic_designer">графический дизайнер</string>
    <string name="interior_designer">дизайнер интерьера</string>
    <string name="ui_designer">дизайнер интерфейсов</string>
    <string name="fashion_designer">дизайнер одежды</string>
    <string name="print_designer">дизайнер полиграфии</string>
    <string name="presentation_designer">дизайнер презентаций</string>
    <string name="communication_designer">коммуникационный дизайнер</string>
    <string name="brand_designer">бренд-дизанер</string>
    <string name="landscape_designer">ландшафтный дизайнер</string>
    <string name="designer">местами дизайнер</string>
    <string name="product_designer">продуктовый дизайнер</string>
    <string name="ux_ui_designer">ux/ui-дизайнер</string>
    <string name="industrial_designer">промышленный дизайнер</string>
    <string name="fpx_designer">fpx-дизайнер</string>
    <string name="ai_designer">ai-дизайнер</string>
    <string name="ar_vr_designer">ar/vr-дизайнер</string>
    <string name="motion_designer">motion-дизайнер</string>
    <string name="smm_designer">smm-дизанер</string>

    <!-- TODO: Текст для fragment_geolocation -->
    <string name="whoa_take_it_easy">воу, полегче</string>
    <string name="choose_only_3">Выбери только 3</string>
    <string name="where_are_you">где ты?</string>
    <string name="your_here">ты тут?</string>
    <string name="fill_it_out_later">заполнишь потом</string>

    <!-- TODO: Текст для fragment_purposes -->
    <!-- Название переменных должны соответствовать title и desc, а не в разнобой называться -->
    <!-- Текст не в паре по целям, сложить нормально -->
    <string name="purposes">Цели</string>
    <string name="text_description_for_purposes_fragment">можно несколько</string>
    <string name="looking_for_friends">ищу друзей</string>
    <string name="communicate_and_share_ideas">общаться и делиться идеями</string>
    <string name="i_am_open_to_relationships">открыт(а) к отношениям</string>
    <string name="looking_for_romance">ищу романтику</string>
    <string name="looking_for_a_company">ищу компанию</string>
    <string name="for_walks_and_hikes_for_events">для прогулок и походов на ивенты</string>
    <string name="i_want_to_join_the_project">хочу присоединиться к проекту</string>
    <string name="looking_for_a_team">ищу команду</string>
    <string name="assembling_team">собираю команду</string>
    <string name="looking_for_people_to_join_my_project">ищу людей в свой проект</string>
    <string name="how_to_communicate">Как общаться?</string>
    <string name="text_hint_about">В жизни каждого человека бывают моменты, когда зашел не в ту дверь — так я попал в дизайн...</string>
    <string name="char_count">0/200</string>

    <!-- TODO: Текст для main_activity -->
    <string name="acquaintances">знакомства</string>
    <string name="communication">общение</string>
    <string name="feed">лента</string>
    <string name="profile">профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>