<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.form.avatar.AvatarFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/img_logo_avatar_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_face"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.95"
        android:fontFamily="@font/nauryz_red_keds"
        android:text="@string/face"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/text_horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        android:background="@color/bg_text_description"
        android:rotation="-5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img_logo"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_description_for_avatar_fragment"
            android:textColor="@color/text_description"
            />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_resume"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/btn_resume_background"
        android:textColor="@color/btn_resume_text_color"
        android:text="@string/resume"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@id/tv_face"
        app:layout_constraintBottom_toTopOf="@id/skipped"
        app:layout_constraintEnd_toEndOf="@id/tv_face"/>

    <TextView
        android:id="@+id/skipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="пропустить"
        android:textColor="#FFF200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>