<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.form.nickname.NickNameFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/logo_for_nickname_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/text_horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        android:background="@color/bg_text_description"
        android:rotation="-5"
        app:layout_constraintBottom_toBottomOf="@id/img_logo">

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_description_for_nickname_fragment"
            android:textColor="@color/text_description"
            />

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.95"
        android:layout_marginBottom="5dp"
        android:hint="@string/last_name_first_name"
        android:textColorHint="@color/text_hint_auth_input_layout"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="@drawable/bg_auth_input"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/nick"
        android:textColorHint="@color/text_hint_auth_input_layout"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="@drawable/bg_auth_input" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/img_nickname_fragment"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/nick"/>

<!--    <ImageSwitcher-->
<!--        android:id="@+id/switcher"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="@id/image"-->
<!--        app:layout_constraintEnd_toEndOf="@id/name"/>-->

    <ImageView
        android:id="@+id/nick_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_nick_switcher"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/name"/>

    <ImageView
        android:id="@+id/name_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_name_switcher"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintEnd_toStartOf="@id/nick_switcher"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_resume"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_resume_background"
        android:textColor="@color/btn_resume_text_color"
        android:text="@string/resume"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name"/>

</androidx.constraintlayout.widget.ConstraintLayout>